--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            margin: 0;
+        }
+        .hidden {
+            display: none!important;
+        }
+        h1 {
+            color: white;
+            font-size: 36px;
+        }
+        .winner {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            z-index: 1;
+            height: 100vh;
+            width: 100vw;
+        }
+    </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
 </head>
 <body>
     
-
+    <div class="winner hidden">
+        <h1>U WIN</h1>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
